<resources>
    <string name="app_name">Every_Move</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="female_exercising_with_heavy_ropes">Female exercising with heavy ropes</string>
    <string name="every_move_logo">Every Move Logo</string>
    <string name="every_move">Every Move</string>
    <string name="profile">Profile</string>
    <string name="chest">Chest</string>
    <string name="legs">legs</string>
    <string name="Legs">Legs</string>
    <string name="Triceps">Triceps</string>
    <string name="Biceps">Biceps</string>
    <string name="back">Back</string>
    <string name="abdomen">Abdomen</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="home">Home</string>
    <string name="logoimage">logoImage</string>
    <string name="planner">Planner</string>
</resources>