<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/get_started_background"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/homeLogo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="160dp"
                android:contentDescription="@string/logoimage"
                tools:src="@drawable/logo" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/upcomingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upcoming_events"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layoutChest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintEnd_toStartOf="@id/layoutLegs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/bench_press" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/chest"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutLegs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutChest"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/bench_press" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Legs"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTriceps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintEnd_toStartOf="@id/layoutLegs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutChest">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/bench_press" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Triceps"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutBiceps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutChest"
                    app:layout_constraintTop_toBottomOf="@id/layoutLegs">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/bench_press" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/Biceps"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintEnd_toStartOf="@id/layoutLegs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutTriceps">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/bench_press" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/back"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutAbdomen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintDimensionRatio="H, 1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutChest"
                    app:layout_constraintTop_toBottomOf="@id/layoutBiceps">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/bench_press" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/abdomen"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>